--- a/modules/ROOT/pages/deployment/security/security.adoc
+++ b/modules/ROOT/pages/deployment/security/security.adoc
@@ -1,7 +1,7 @@
 = Securing Infinite Scale
 :toc: right
 
-:description: As any system being accessible via the web, Infinite Scale also needs to be secured via classical methods on the front-end side. You know best what's necessary for your environment. However, demo users which can be created on initialization should definitely be removed before going productive.
+:description: As with any system accessible via the web, Infinite Scale also needs to be secured via classical methods on the front-end side. You know best what's necessary for your environment. However, demo users which can be created on initialization should definitely be removed before going into production.
 
 == Introduction
 
