--- a/modules/ROOT/pages/deployment/services/nats.adoc
+++ b/modules/ROOT/pages/deployment/services/nats.adoc
@@ -3,7 +3,7 @@
 
 :ext_name: nats
 
-:description: The nats service is the event broker of the system. It distributes events among all other services and enables other services to communicate asynchronous.
+:description: The nats service is the event broker of the system. It distributes events among all other services and enables other services to communicate asynchronously.
 
 == Introduction
 
@@ -11,7 +11,7 @@
 
 Services can `Publish` events to the nats service and nats will store these events on disk and distribute these events to other services eventually.
 
-Services can `Consume` events from the nats service by registering to a `ConsumerGroup`. Each `ConsumerGroup` is guaranteed to get each event exactly once. In most cases, each service will register its own `ConsumerGroup`. When there are multiple instances of a service, those instances will usually use that `ConsumerGroup` as common resource.
+Services can `Consume` events from the nats service by registering to a `ConsumerGroup`. Each `ConsumerGroup` is guaranteed to get each event exactly once. In most cases, each service will register its own `ConsumerGroup`. When there are multiple instances of a service, those instances will usually use that `ConsumerGroup` as a common resource.
 
 == Default Values
 
@@ -22,17 +22,17 @@ Services can `Consume` events from the nats service by registering to a `Consume
 
 As the service name suggests, this service is based on https://nats.io/[NATS] specifically on https://docs.nats.io/nats-concepts/jetstream[NATS Jetstream] to enable persistence.
 
-== Persistance
+== Persistence
 
-To be able to deliver events even after a system or service restart, nats will store events in a folder on the local filesystem. This folder can be specified by setting the `NATS_NATS_STORE_DIR` enviroment variable. If not set, the service will fall back to `$OCIS_BASE_DATA_PATH:/nats`.
+To be able to deliver events even after a system or service restart, nats will store events in a folder on the local filesystem. This folder can be specified by setting the `NATS_NATS_STORE_DIR` environment variable. If not set, the service will fall back to `$OCIS_BASE_DATA_PATH:/nats`.
 
 == TLS Encryption
 
-Connections to the nats service (`Publisher`/`Consumer` see above) can be TLS encrypted by setting the corresponding env vars `NATS_TLS_CERT`, `NATS_TLS_KEY` to the cert and key files and `ENABLE_TLS` to true. Checking the certificate of incoming request can be disabled with the `NATS_EVENTS_ENABLE_TLS` environment variable.
+Connections to the nats service (`Publisher`/`Consumer` see above) can be TLS encrypted by setting the corresponding env vars `NATS_TLS_CERT`, `NATS_TLS_KEY` to the cert and key files and `ENABLE_TLS` to true. Checking the certificate of an incoming request can be disabled with the `NATS_EVENTS_ENABLE_TLS` environment variable.
 
 Certificate files can also be set via global variables starting with `OCIS_`, for details see the environment variable list.
 
-Note that using TLS is highly recommended for productive environments, especially when using container orchestration with Kubernetes.
+Note that using TLS is highly recommended for production environments, especially when using container orchestration with Kubernetes.
 
 include::partial$deployment/services/beta-statement.adoc[]
 
