--- a/modules/ROOT/pages/configuration/office-integration.adoc
+++ b/modules/ROOT/pages/configuration/office-integration.adoc
@@ -96,7 +96,7 @@ DEMO_USERS=
 WOPISERVER_DOCKER_TAG=
 # cs3org wopi server domain. Defaults to "wopiserver.owncloud.test"
 WOPISERVER_DOMAIN=
-# JWT secret which is used for the documents to be requested by the Wopi client from the cs3org Wopi server. Must be change in order to have a secure Wopi server. Defaults to "LoremIpsum567"
+# JWT secret which is used for the documents to be requested by the Wopi client from the cs3org Wopi server. Must be changed in order to have a secure Wopi server. Defaults to "LoremIpsum567"
 WOPI_JWT_SECRET=
 
 ### Collabora settings ###
